Whoops, forgot to link the demo to the tutorial

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <div style="position:absolute">
+        <a style="color:lightblue" href="tutorial.html">Check out how this works</a>
+    </div>
+    <canvas id="canvas">
+        </canvas>
     <div class="slidecontainer">
         <p>Focal Length</p>
         <input type="range" min="0" max="200" value="20" step="0.05" class=" slider " id="focal" oninput="updateCanvas() ">
