ChatGPT changed all of my text. :|

--- a/tutorial.html
+++ b/tutorial.html
@@ -308,6 +308,8 @@ onScreenCoordinate[1] = (focalLength * (vertex[1] - cameraY)) / (focalLength + v
         &copy; 2024 Eitan Alperstein
     </footer>
 
+    <!-- NOTE: While trying to style my article with ChatGPT, it changed all of my text. Too lazy to go line by line and change it back. It is what it is. ¯\_(ツ)_/¯ -->
+
     <script src="prism.js"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </body>
